@@ -359,10 +359,7 @@ rmdir (const char *dir)
   else if (has_dot_last_component (dir, false))
     set_errno (EINVAL);
   else if (isdev_dev (fh->dev ()))
-    {
-      set_errno (ENOTEMPTY);
-      goto done;
-    }
+    set_errno (ENOTEMPTY);
   else if (!fh->rmdir ())
     res = 0;
 
