@@ -1,3 +1,7 @@
+2014-08-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* dir.cc (rmdir): Don't skip deleting fh in the ENOTEMPTY case.
+
 2014-08-20  Corinna Vinschen  <corinna@vinschen.de>
 
 	* tls_pbuf.h (tmp_pathbuf::tmp_pathbuf): Convert to inline method.
